test/spec_vectors/simd_f64x2_rounding/fail/module_18.wat
(module (func (result v128) (f64x2.floor (i32.const 0))))